[package]
name = "ssc-tools"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ssc"
path = "src/main.rs"

[dependencies]
ssc = { path = "../ssc" }
tokio = { version = "1.38.0", features = ["rt", "macros"] }
clap = { version = "4.5.7", features = ["cargo"] }
anyhow = "1.0.86"
serde_json = "1.0.117"