[package]
name = "ssc"
version = "0.1.0"
edition = "2021"

[dependencies]
#mdns = "3.0.0"
thiserror = "1.0.61"
futures-util = "0.3.30"
mdns-sd = "0.11.1"
flume = "0.11.0"
tokio = { version = "1.38.0", features = ["sync", "net", "io-util", "time", "rt"] }
serde_json = "1.0.117"
serde = { version = "1.0.203", features = ["derive"] }
log = "0.4.21"
zeroconf = "0.14.1"
